# LordOfRings_game

./: CMakeLists.txt  README.md  main.cpp  start.sh  test.cpp
.github/workflows/: main.yml
implementation/: Adapter_Traitors.cpp  Adapter_Traitors.h  AndrewAlgorithm.cpp  AndrewAlgorithm.h  JarvisAlgorithm.h  JarvisAlgorithm.h.cpp  army.cpp  army.h  army_factory.h  context.cpp  context.h  decorator_dwarf.cpp  decorator_dwarf.h  decorator_elf.cpp  decorator_elf.h  decorator_hobbit.cpp  decorator_hobbit.h  decorator_magic_creature.cpp  decorator_magic_creature.h  detachment.cpp  detachment.h  dwarf.cpp  dwarf.h  elf.cpp  elf.h  game.h  heros.cpp  heros.h  hobbit.cpp  hobbit.h  magic_creature.h  magician.cpp  magician.h  nazgul.cpp  nazgul.h  point.h  stragedy.h  villains.cpp  villains.h  visitor.cpp  (+1 more)
realisations/: army.cpp  army.h  army_factory.h  constants.h  dwarf.cpp  dwarf.h  elf.cpp  elf.h  game.h  heros.cpp  heros.h  hobbit.cpp  hobbit.h  magic_creature.h  magician.cpp  magician.h  nazgul.cpp  nazgul.h  villains.cpp  villains.h
task1/: run.sh
task2/: CMakeLists.txt  CmakeLists.txt
task2/A/: index.cpp  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
task3/: CMakeLists.txt
